src/objects/Radicacion_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Es_ciudadano_o_residente_codeudor1__c</fullName>
        <label>Es ciudadano o residente de EEUU?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_ciudadano_o_residente_codeudor2__c</fullName>
        <label>Es ciudadano o residente de EEUU?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_ciudadano_o_residente_codeudor3__c</fullName>
        <label>Es ciudadano o residente de EEUU?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_ciudadano_o_residente_de_EEUU__c</fullName>
        <label>Es ciudadano o residente de EEUU?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_hijo_de_padres_EEUU_Extranjeros__c</fullName>
        <label>Es hijo de padres EEUU/Extranjeros?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_nacido_en_los_EEUU__c</fullName>
        <label>Es nacido en los EEUU?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_ud_apoderado__c</fullName>
        <label>¿Es ud. apoderado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_victima_segun_ley_1448_de_2011__c</fullName>
        <label>Es victima según ley 1448 de 2011</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Especifique__c</fullName>
        <label>Especifique</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estado_Civil_Codeudor_1__c</fullName>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Unión libre</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_civil_Codeudor1__c</fullName>
        <formula>TEXT(Codeudor_1__r.Estado_civil__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado civil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_civil_D__c</fullName>
        <formula>TEXT(Solicitud_de_credito__r.Cliente_deudor__r.Estado_civil__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado civil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Unión Libre</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estrato__c</fullName>
        <label>Estrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extensión</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extension_codeudor1__c</fullName>
        <label>Extensión</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extension_codeudor2__c</fullName>
        <label>Extensión</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extension_codeudor3__c</fullName>
        <label>Extensión</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Familiar_Nombre_y_Apellido__c</fullName>
        <label>Familiar - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Familiar_Nombre_y_Apellido_codeudor1__c</fullName>
        <label>Familiar - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Familiar_Nombre_y_Apellido_codeudor2__c</fullName>
        <label>Familiar - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Familiar_Nombre_y_Apellido_codeudor3__c</fullName>
        <label>Familiar - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_de_la_oficina_codeudor1__c</fullName>
        <label>Fax de la oficina</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_de_la_oficina_codeudor2__c</fullName>
        <label>Fax de la oficina</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_de_la_oficina_codeudor3__c</fullName>
        <label>Fax de la oficina</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_oficina__c</fullName>
        <label>Fax oficina</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_analisis__c</fullName>
        <label>Fecha análisis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicin_Deudor__c</fullName>
        <label>Fecha de expedición</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion_Codeudor1__c</fullName>
        <label>Fecha de expedición</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion_Codeudor2__c</fullName>
        <label>Fecha de expedición</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion_Codeudor3__c</fullName>
        <label>Fecha de expedición</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_inicio_de_contrato__c</fullName>
        <label>Fecha de inicio de contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento_codeudor1__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento_codeudor2__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento_codeudor3__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_estimada_entrega__c</fullName>
        <label>Fecha estimada entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_radicacion1__c</fullName>
        <formula>Solicitud_de_credito__r.Fecha_radicacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha radicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_radicacion__c</fullName>
        <label>Fecha radicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fondos_de_empleados__c</fullName>
        <label>Fondos de empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fondos_de_empleados_codeudor1__c</fullName>
        <label>Fondos de empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fondos_de_empleados_codeudor2__c</fullName>
        <label>Fondos de empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fondos_de_empleados_codeudor3__c</fullName>
        <label>Fondos de empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_financieros__c</fullName>
        <label>Gastos financieros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_financieros_codeudor1__c</fullName>
        <label>Gastos financieros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_financieros_codeudor2__c</fullName>
        <label>Gastos financieros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_financieros_codeudor3__c</fullName>
        <label>Gastos financieros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales_codeudor1__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales_codeudor2__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales_codeudor3__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goza_de_reconocimiento_publico__c</fullName>
        <label>Goza de reconocimiento público</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hipoteca_activo2__c</fullName>
        <label>Hipoteca</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hipoteca_activo__c</fullName>
        <label>Hipoteca</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Credito__c</fullName>
        <externalId>true</externalId>
        <label>Id Crédito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Radicacion__c</fullName>
        <externalId>true</externalId>
        <label>Id Radicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificacion_del_producto__c</fullName>
        <label>Identificación del producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificacion_del_producto_codeudor1__c</fullName>
        <label>Identificación del producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificacion_del_producto_codeudor2__c</fullName>
        <label>Identificación del producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificacion_del_producto_codeudor3__c</fullName>
        <label>Identificación del producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_comite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Información comité</label>
        <referenceTo>Informacion_comite__c</referenceTo>
        <relationshipLabel>Radicaciones de créditos</relationshipLabel>
        <relationshipName>Radicaciones_de_cr_ditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Informacion_de_los_solicit_codeudor2__c</fullName>
        <label>Información de los solicitantes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Información basica del conyugue</fullName>
                </value>
                <value>
                    <fullName>Segundo solicitante y/o codeudor</fullName>
                </value>
                <value>
                    <fullName>Avalista</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informacion_de_los_solicitant_codeudor3__c</fullName>
        <label>Información de los solicitantes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avalista</fullName>
                </value>
                <value>
                    <fullName>Información básica del cónyugue</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
                <value>
                    <fullName>Segundo solicitante y/o codeudor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informacion_de_los_solicitantes__c</fullName>
        <label>Información de los solicitantes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
                <value>
                    <fullName>Información básica del cónyugue</fullName>
                </value>
                <value>
                    <fullName>Segundo solicitante y/o codeudor</fullName>
                </value>
                <value>
                    <fullName>Avalista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingreso_bruto_total__c</fullName>
        <label>Ingreso bruto total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_disponible_ajustado_total__c</fullName>
        <label>Ingreso neto disponible ajustado total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_total__c</fullName>
        <label>Ingreso neto total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_no_operacionales_codeudor1__c</fullName>
        <label>Ingresos no operacionales de otra activ.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_no_operacionales_codeudor2__c</fullName>
        <label>Ingresos no operacionales de otra activ.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_no_operacionales_codeudor3__c</fullName>
        <label>Ingresos no operacionales de otra activ.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_no_operacionales_de_otra_activ__c</fullName>
        <label>Ingresos no operacionales de otra activ.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inscrito_en_el_Registro_nico_de_V_ctima__c</fullName>
        <label>Inscrito en Registro Único de Víctimas?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interior__c</fullName>
        <label>Interior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedici_n_codeudor1__c</fullName>
        <label>Lugar de expedición</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion_Deudor__c</fullName>
        <label>Lugar de expedición</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion_codeudor2__c</fullName>
        <label>Lugar de expedición</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion_codeudor3__c</fullName>
        <label>Lugar de expedición</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento_Deudor__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento_codeudor1__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento_codeudor2__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento_codeudor3__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maneja_recursos_publicos__c</fullName>
        <label>Maneja recursos públicos?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca_de_vehiculo_activo2__c</fullName>
        <label>Marca de vehiculo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca_de_vehiculo_activo__c</fullName>
        <label>Marca de vehiculo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modalidad_del_credito__c</fullName>
        <label>Modalidad del crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pesos</fullName>
                </value>
                <value>
                    <fullName>Uvr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo_activo2__c</fullName>
        <label>Modelo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modelo_activo__c</fullName>
        <label>Modelo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda_codeudor1__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moneda_codeudor2__c</fullName>
        <label>Moneda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moneda_codeudor3__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_codeudor1__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_codeudor2__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_codeudor3__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nacional_turista_de_algun_pais_miembro__c</fullName>
        <inlineHelpText>Es nacional turista de algún país miembro de la Comunidad Andina</inlineHelpText>
        <label>Nacional turista de algún país miembro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nacionalidad__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colombiana</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nacionalidad_codeudor1__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colombiana</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nacionalidad_codeudor2__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colombiana</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nacionalidad_codeudor3__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colombiana</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_educacion__c</fullName>
        <label>Nivel de educación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primaria</fullName>
                </value>
                <value>
                    <fullName>Secundaria</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
                <value>
                    <fullName>Técnica</fullName>
                </value>
                <value>
                    <fullName>Postgrado</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_educacion_codeduor2__c</fullName>
        <label>Nivel de educación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>primaria</fullName>
                </value>
                <value>
                    <fullName>secundaria</fullName>
                </value>
                <value>
                    <fullName>universitario</fullName>
                </value>
                <value>
                    <fullName>técnica</fullName>
                </value>
                <value>
                    <fullName>postgrado</fullName>
                </value>
                <value>
                    <fullName>ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_educacion_codeudor1__c</fullName>
        <label>Nivel de educación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
                <value>
                    <fullName>Primaria</fullName>
                </value>
                <value>
                    <fullName>Secundaria</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
                <value>
                    <fullName>Técnica</fullName>
                </value>
                <value>
                    <fullName>Postgrado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_educacion_codeudor3__c</fullName>
        <label>Nivel de educación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primaria</fullName>
                </value>
                <value>
                    <fullName>Secundaria</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
                <value>
                    <fullName>Técnica</fullName>
                </value>
                <value>
                    <fullName>Postgrado</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_matricula_inmobiliaria_activo2__c</fullName>
        <label>No. matrícula inmobiliaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_matricula_inmobiliaria_activo__c</fullName>
        <label>No. matrícula inmobiliaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_personas_a_cargo__c</fullName>
        <label>No. personas a cargo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_personas_a_cargo_codeudor1__c</fullName>
        <label>No. personas a cargo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_personas_a_cargo_codeudor2__c</fullName>
        <label>No. personas a cargo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_personas_a_cargo_codeudor3__c</fullName>
        <label>No. personas a cargo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_arrendador__c</fullName>
        <label>Nombre arrendador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_empresa_codeudor1__c</fullName>
        <label>Nombre de la empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_empresa_codeudor2__c</fullName>
        <label>Nombre de la empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_empresa_codeudor3__c</fullName>
        <label>Nombre de la empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_entidad_empleadora_o_negocio__c</fullName>
        <label>Nombre entidad empleadora o negocio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_entidad_financiera__c</fullName>
        <label>Nombre entidad financiera</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_entidad_financiera_codeudor1__c</fullName>
        <label>Nombre entidad financiera</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_entidad_financiera_codeudor2__c</fullName>
        <label>Nombre entidad financiera</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_entidad_financiera_codeudor3__c</fullName>
        <label>Nombre entidad financiera</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_jefe__c</fullName>
        <label>Nombre jefe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombres_y_apellidos__c</fullName>
        <label>Nombres y apellidos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas_cliente_deudor__c</fullName>
        <label>Número de consultas cliente deudor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas_codeudor1__c</fullName>
        <label>Número de consultas codeudor1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas_codeudor2__c</fullName>
        <label>Número de consultas codeudor2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>